# PepSIRF

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  build.sh  docker-compose.yml
.github/workflows/: cppCI.yml
doc/: doxygen.conf
doc/module_readme/: README.md  README_bin.md  README_deconv.md  README_demux.md  README_info.md  README_link.md  README_norm.md  README_p_enrich.md  README_s_enrich.md  README_subjoin.md  README_zscore.md
docs/: 1-index.md  2-installation.md  3-docker.md  5-changelog.md  Gemfile  _config.yml  about.md  autopepsirf-tutorials.md  examples.md  index.md  installation.md  modules.md  pepsirf-tutorials.md  versioning.md
docs/_layouts/: advanced.html  default.html
docs/_sass/: jekyll-theme-slate.scss
docs/_sass/imports/: _footer.scss  _header.scss  _icons.scss  _palettes.scss
extensions/: SBnorm.py  aaBias.py  addPeptides.py  align2consensus.py  alignedEnrichedPepPlots.py  alignedPepPlots.py  analyzeDownsampled.py  assignSeqToCategory.py  autoLongPS.py  autoPepSIRF.py  binStats.py  biosampleFromNTacc.py  bulkClustering.py  checkTaxonomy.py  clustAlign.py  clustTaxSum.py  clusterLinkage.py  code.py  compMatrices.py  convertAnnotCoords.py  differentialPepPlots.py  dilution_conc.py  dnaTagTruncation.py  downsample2max.py  downsampleReads.py  e_k_bias.py  enrichedScatterplots.py  epiPlots.py  epiclust.py  epitopeLevelScores.py  findEpitopes.py  generateClusters.py  get_replicate_average.py  keepTaxFromLinkMap.py  link_patternedKmers.py  linkageMap2GMT.py  mafftPlusProbeMap.py  matrixCorrelations.py  multiEncodingsToAA.py  multiproteinClusterProp.py  (+26 more)
include/: Student.h  options.h  options_parser.h  sequence.h
include/modules/core/: bk_tree.h  cli_validator.h  distance_matrix.h  distance_tools.h  fastq_score.h  fastq_sequence.h  file_io.h  fs_tools.h  kmer_tools.h  logger.h  maps.h  matrix.h  module.h  module.h~  module_details.h  module_factory.h  module_initializer.h  modules.h  noop_iterator.h  omp_opt.h  options.h  options_factory.h  options_parser_factory.h  pepsirf_version.h  peptide.h  peptide_scoring.h  predicate.h  scored_entity.h  sequence.h  sequence_indexer.h  setops.h  stats.h  stream_tools.h  time_keep.h  util.h
include/modules/deconv/: evaluation_strategy.h  module_deconv.h  options_deconv.h  options_parser_deconv.h  original_data.h  overlap_data.h  scored_peptide.h  species_data.h  species_id.h  tie_data.h
include/modules/demux/: et_search.h  fif_parser.h  module_demux.h  nt_aa_translator.h  options_demux.h  options_parser_demux.h  sample.h  samplelist_parser.h  translation_map.h
include/modules/enrich/: module_enrich.h  options_enrich.h  options_parser_enrich.h
include/modules/info/: module_info.h  options_info.h  options_parser_info.h
include/modules/link/: metadata_map.h  metadata_parser.h  metadata_retrieve.h  module_link.h  options_link.h  options_parser_link.h
include/modules/link2/: metadata_map2.h  module_link2.h  options_link2.h  options_parser_link2.h
include/modules/normalize/: module_normalize.h  options_normalize.h  options_parser_normalize.h
include/modules/p_enrich/: module_p_enrich.h  options_p_enrich.h  options_parser_p_enrich.h  paired_score.h
include/modules/parsers/: fasta_parser.h  fastq_parser.h  options_parser.h
include/modules/qc/: module_qc.h  options_parser_qc.h  options_qc.h
include/modules/s_enrich/: module_s_enrich.h  options_parser_s_enrich.h  options_s_enrich.h  peptide_score.h
precompiled/linux_mint_19.3/: pepsirf_1.3.1_linux  pepsirf_1.3.1_linux_hdibeta  pepsirf_1.3.4_linux  pepsirf_1.3.5_linux  pepsirf_1.3.6_linux  pepsirf_1.3.7_linux  pepsirf_1.4.0_linux
precompiled/mac_10.14_Mojave/: pepsirf_1.3.1_mac10.14  pepsirf_1.3.1_mac10.14_hdiBeta  pepsirf_1.3.2_mac10.14  pepsirf_1.3.3_mac10.14  pepsirf_1.3.4_mac10.14
precompiled/mac_10.15_Catalina/: pepsirf_1.3.5_mac10.15
precompiled/mac_11.4_BigSur/: pepsirf_1.3.5_11.4  pepsirf_1.3.7_11.4  pepsirf_1.4.0_11.4  pepsirf_1.4.0_11.6.5
scripts/: check_correct_counts.py  count_r1_i1.py  fastq_to_fasta.py  verify_agg_counts.py
src/: main.cpp  options.cpp  sequence.cpp
src/parsers/: fasta_parser.cpp  options_parser.cpp  options_parser.cpp~
test/: PV1_10K3000_53_encoded_segment.faa  full_design_clean_min30_taxtweak_100perc_jingmens_2019-09-12_segment.fasta  full_design_clean_min30_taxtweak_100perc_jingmens_2019-09-12_segment.metadata  pepsirf_module_test.sh  pepsirf_norm_test.sh  pepsirf_penrich_test.sh  pepsirf_test.cpp  test_bin_output.txt  test_bins.tsv  test_colsum_matrix.tsv  test_demux_output.tsv  test_diagnostic_output.tsv  test_enriched_file.tsv  test_fastq.fasta  test_info_avg_matrix.tsv  test_info_col_sums.tsv  test_info_sample_names.tsv  test_raw_matrix.tsv  test_samplelist.tsv  test_samplenames_norm.txt  test_score_matrix.tsv  test_subjoin_exclude_output.tsv  test_subjoin_output.txt  test_utils.h  test_zscore_hdi_output.tsv
test/expected/: test_expected_bins.tsv  test_expected_deconv_output.tsv  test_expected_demux_NS30.tsv  test_expected_demux_unmapped_reads.fastq  test_expected_diagnostic_NS30.tsv  test_expected_info_col_sums.tsv  test_expected_info_pep_names.tsv  test_expected_subjoin_exclude_output.tsv  test_expected_zscore_trim_output.tsv
test/input_data/: full_design_clean_min30_taxtweak_100perc_jingmens_2019-09-12_segment.metadata  test.fasta  test_barcodes.fa  test_deconv_custom_id_map.tsv  test_demux_library_NS30.fna  test_enrich_CS.tsv  test_enrich_PN.tsv  test_enrich_Z-HDI75.tsv  test_enrich_raw_scores.tsv  test_enrich_thresh.tsv  test_extended_demux_library_NS30.fna  test_fastq.fastq  test_flex_index_file.tsv  test_forward_index.fa  test_info_rep_names.tsv  test_info_score_matrix.tsv  test_input_r2_NS30.fastq  test_kmer_frequency.tsv  test_pep_linkages.tsv  test_samplelist_NS30.tsv  test_score_matrix.tsv  test_spec_thresholds.tsv  test_subjoin_exclude_namelist.txt  test_subjoin_namelist.txt  test_zscore_bins.tsv  test_zscore_score_matrix.tsv
tutorial_files/demux/: PCV_coded_hits.fna  PCV_hits.tsv  ZZ_sample_list_PCV_Edit.tsv  commands.txt  diagnostics.out
(+130 files in other folders)
